--- a/estilo_index.css
+++ b/estilo_index.css
@@ -1,5 +1,3 @@
-
-
 body {
     height: 100%;
     background-image: radial-gradient(circle, #5058F2, #F2F2F2);
@@ -9,12 +7,12 @@ body {
 }
 section {
     width: 60%;
-    height: 150%;
+    height: 550px;
     margin: 50px auto;
     border: 2px #9C8BD9 solid;
     background-color: #c3c8e4;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px #52505b;
+    box-shadow: 5px 5px 5px #0000002c;
     flex-wrap: wrap;
 
 }
@@ -31,7 +29,7 @@ section {
     display: inline-block;
     text-align: left;
     width: 40%;
-    height: 70%;
+    height: 60%;
     margin: 40px 0px 50px 10px; 
     padding: 20px 10px 10px 20px;
     background-color: #F2F2F2;
