--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,3 @@
-
-
 body {
     background-image: radial-gradient(circle, #5058F2, #F2F2F2);
     font-family: 'Montserrat', sans-serif;
@@ -14,7 +12,7 @@ body {
     border: 2px #9C8BD9 solid;
     background-color: #c3c8e4;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px #52505b;
+    box-shadow: 5px 5px 5px #0000002c;
     padding: 10px 10px 10px 10px;
 }
 input {
