--- a/estilo_index.css
+++ b/estilo_index.css
@@ -40,7 +40,6 @@ section {
     display: block;
 }
 .botao-link {
-    transition: all 0.5s;
     border: 1px #2027a2 solid;
     text-decoration: none;
     display: flex;
@@ -50,7 +49,7 @@ section {
     width: 300px;
     height: 50px;
     border-radius: 10px;
-    margin: 0px 0px 30px 50px;
+    margin: auto;
     background: linear-gradient(180deg, #5058F2 0%, #303AF2 100%);
     background-origin: border-box;
    box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
