--- a/estilo_index.css
+++ b/estilo_index.css
@@ -22,13 +22,13 @@ section {
     height: 70%;
     margin: 30px auto;
     flex-wrap: wrap;
-    margin: 0px 0px 60px 10px;
+    margin: 10px auto;
 }
 .container2 {
     border-radius: 20px;
     display: inline-block;
     text-align: left;
-    width: 40%;
+    width: 60%;
     height: 60%;
     margin: 40px 0px 50px 10px; 
     padding: 20px 10px 10px 20px;
@@ -49,7 +49,7 @@ section {
     width: 300px;
     height: 50px;
     border-radius: 10px;
-    margin: auto;
+    margin: 10px auto;
     background: linear-gradient(180deg, #5058F2 0%, #303AF2 100%);
     background-origin: border-box;
    box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
