--- a/estilo_index.css
+++ b/estilo_index.css
@@ -1,34 +1,63 @@
 body {
+    height: 100%;
+    background-image: radial-gradient(circle, #5058F2, #F2F2F2);
     font-family: 'Montserrat', sans-serif;
-    min-height: 100vh;
+    font-size: 18px;
+    text-align: center;
+}
+section {
+    width: 60%;
+    height: 550px;
+    margin: 50px auto;
+    border: 2px #9C8BD9 solid;
+    background-color: #c3c8e4;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #0000002c;
+    flex-wrap: wrap;
+
+}
+.container {
+    display: inline-block;
+    width: 40%;
+    height: 70%;
+    margin: 30px auto;
+    flex-wrap: wrap;
+    margin: 10px auto;
+}
+.container2 {
+    border-radius: 20px;
+    display: inline-block;
+    text-align: left;
+    width: 60%;
+    height: 60%;
+    margin: 40px 0px 50px 10px; 
+    padding: 20px 10px 10px 20px;
+    background-color: #F2F2F2;
+    color: #2d36df;
+    flex-wrap: wrap;
+}
+.button-group {
+    display: block;
+}
+.botao-link {
+    border: 1px #2027a2 solid;
+    text-decoration: none;
     display: flex;
     flex-direction: column;
-    background-image: radial-gradient(circle, #5058F2, #F2F2F2);
-}
-
-.container-custom {
-    flex: 1;
-    margin-top: 50px;
-}
-
-.custom-section {
-    background-color: #c3c8e4;
-    border: 2px solid #9C8BD9;
+    justify-content: center;
+    color: aliceblue;
+    width: 300px;
+    height: 50px;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-}
-
-.custom-button {
+    margin: 10px auto;
     background: linear-gradient(180deg, #5058F2 0%, #303AF2 100%);
-    border: none;
-    color: #fff;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 10px 20px;
-    box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+    background-origin: border-box;
+   box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+    
 }
-
+section h3, h1 {
+    color: #2d36df;
+}
 footer {
     background-color: #2027a2;
     color: #fff;
