--- a/estilo_index.css
+++ b/estilo_index.css
@@ -47,9 +47,16 @@ section {
     align-items: center;
     box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
 }
-section h3, h1 {
+
+.dicas {
+    text-align: left;
+    background-color: #F2F2F2;
     color: #2d36df;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 20px;
 }
+
 footer {
     background-color: #2027a2;
     color: #fff;
