--- a/estilo_index.css
+++ b/estilo_index.css
@@ -1,59 +1,63 @@
 body {
-    font-family: 'Montserrat', sans-serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
+    height: 100%;
     background-image: radial-gradient(circle, #5058F2, #F2F2F2);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    text-align: center;
 }
-
-.container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-}
-
 section {
     width: 60%;
+    height: 550px;
     margin: 50px auto;
     border: 2px #9C8BD9 solid;
     background-color: #c3c8e4;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    text-align: center;
-}
+    box-shadow: 5px 5px 5px #0000002c;
+    flex-wrap: wrap;
 
+}
+.container {
+    display: inline-block;
+    width: 40%;
+    height: 70%;
+    margin: 30px auto;
+    flex-wrap: wrap;
+    margin: 10px auto;
+}
+.dicas {
+    border-radius: 20px;
+    display: inline-block;
+    text-align: left;
+    width: 60%;
+    height: 60%;
+    margin: 40px 0px 50px 10px; 
+    padding: 20px 10px 10px 20px;
+    background-color: #F2F2F2;
+    color: #2d36df;
+    flex-wrap: wrap;
+}
 .button-group {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: block;
 }
-
 .botao-link {
     border: 1px #2027a2 solid;
     text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     color: aliceblue;
     width: 300px;
     height: 50px;
     border-radius: 10px;
-    margin: 10px 0;
+    margin: 10px auto;
     background: linear-gradient(180deg, #5058F2 0%, #303AF2 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+    background-origin: border-box;
+   box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
+    
 }
-
-.dicas {
-    text-align: left;
-    background-color: #F2F2F2;
+section h3, h1 {
     color: #2d36df;
-    border-radius: 20px;
-    padding: 20px;
-    margin-top: 20px;
 }
-
+  footer {
+    color: #2027a2 ;
+  }
