--- a/estilo_index.css
+++ b/estilo_index.css
@@ -22,16 +22,19 @@ section h3, h1 {
     display: inline-block;
     width: 100%;
     height: 70%;
-    margin: 30px auto;
+    margin: 40px 0px 50px 0px; 
+    padding: 20px 10px 20px 10px;
     flex-wrap: wrap;
     margin: 10px auto;
 }
 .container2 {
+    width: 20%;
+    height: 70%;
     border-radius: 20px;
     display: inline-block;
     text-align: left;
-    margin: 40px 0px 50px 10px; 
-    padding: 20px 10px 10px 20px;
+    margin: 40px 0px 50px 0px; 
+    padding: 20px 10px 20px 10px;
     background-color: #F2F2F2;
     color: #2d36df;
     flex-wrap: wrap;
